--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "^5.2.0"
     },
     "autoload": {
         "classmap": [
